# Continual-IDS-TabTransformer

./: .gitignore  .~forgetoriginal.py  LICENSE  README.md  attack.py  ci_builder.py  config.yaml  continual.py  forget.py  forgetv1.py  main.py  naive-DI.py  naive.py  preprocess.py  preprocessnb.ipynb  pyproject.toml  replay.py  tab-preprocessing.py  test_nb.ipynb  train.py
.github/: markdown-link-check-config.json
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml  security.yml  test.yml
configs/: config.yaml  sweep.yaml
preprocess_csv/: .gitkeep
preprocess_csv/CICIDS2017/: .gitkeep
src/: __init__.py
src/data/: __init__.py  ci_builder.py  preprocess.py
src/strategies/: __init__.py  attack.py  replay.py
src/training/: __init__.py  train.py
tests/: __init__.py  test_data_ci_builder.py  test_data_preprocess.py  test_strategies_attack.py  test_strategies_replay.py
tests/integration/: __init__.py  test_pipeline.py
