[project]
name = "continual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "tqdm",
    "numpy",
    "scikit-learn",
    "tab-transformer-pytorch>=0.4.2",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "torchsummary>=1.5.1",
    "torchinfo>=1.8.0",
    "wandb>=0.21.3",
    "plotly>=6.3.0",
    "avalanche-lib>=0.6.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "ruff>=0.14.9",
    "kagglehub>=0.3.13",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
